--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         }
     ],
     "require": {
-        "laravel/framework": "^6|^7|^8|^9|^10|^11"
+        "laravel/framework": "^6|^7|^8|^9|^10|^11|^12"
     },
     "require-dev": {
         "laravel/pint": "^1.18"
